--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "framer-motion": "^12.6.3",
-    "next": "15.2.4",
+    "next": "^16.0.8",
     "node": "^23.11.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
